Fixed all broken tests and Message impl constructors
Fixed all broken tests and Message impl constructors

#3085